# FinCalc

./: .gitignore  CMakeLists.txt  README.md
src/: fin_calc.cpp  fin_calc.h  main.cpp
